# eureqa-mathematica-client

./: .gitignore  CMakeLists.txt  README  README.html  README.md  eureqa_api
CMake/mathlink/: FindMathLink.cmake
eureqa_api_1_02_0/: INSTALL.TXT  index.html
eureqa_api_1_02_0/eureqa/: connection.h  data_set.h  eureqa.h  search_options.h  search_progress.h  server_info.h  solution_frontier.h
eureqa_api_1_02_0/examples/basic_client/: basic_client.cpp
eureqa_api_1_02_0/examples/data_sets/: default_data.txt
eureqa_api_1_02_0/examples/minimal_client/: minimal_client.cpp
eureqa_api_1_02_0/server/linux/: eureqa_server
src/: CMakeLists.txt  eureqa.cpp  eureqa.tm  eureqaml.cpp  eureqaml.tm
src/EureqaClient/: init.m
